--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,10 @@ services:
       context: .
       dockerfile: Pedidos/Dockerfile
 
+
+  identity:
+    image: ${DOCKER_REGISTRY-}identity
+    build:
+      context: .
+      dockerfile: Identity/Dockerfile
+
